--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@vercel/analytics": "^1.5.0",
     "cheerio": "^1.0.0",
     "next": "15.3.2",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/next-pwa": "^5.6.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
