--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@supabase/supabase-js": "^2.49.4",
     "@vercel/analytics": "^1.5.0",
     "cheerio": "^1.0.0",
+    "framer-motion": "^12.12.1",
     "next": "15.3.2",
     "next-pwa": "^5.6.0",
     "react": "^19.0.0",
