--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/src/app/api/dummy
+src/app/api/dummy
+
+public/sw*
+public/swe-worker*
 
 # dependencies
 /node_modules
