--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.2.0",
+    "@serwist/next": "^9.0.14",
     "@vercel/analytics": "^1.5.0",
     "cheerio": "^1.0.0",
     "framer-motion": "^12.12.1",
@@ -23,6 +24,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/serviceworker": "^0.0.135",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
